IF(WIN32)
	#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4018 /wd4244")
ENDIF()

SET(SRCDIR "${CMAKE_CURRENT_SOURCE_DIR}/../../Libraries/binn-3.0/src")
SET(LIBDIR "${CMAKE_CURRENT_SOURCE_DIR}/../../Libraries")

SET(BINN_SRCS
    ${SRCDIR}/binn.c
)

ADD_LIBRARY(binn STATIC ${BINN_SRCS})

TARGET_INCLUDE_DIRECTORIES(
    binn
    PUBLIC
    ${SRCDIR}/
)
